--- a/Wikipedia Viewer/main.css
+++ b/Wikipedia Viewer/main.css
@@ -5,13 +5,12 @@ html{
   padding: none;
   color: #fff;
   background-color: #000;
-  height: 100%
+  height: 100%;
 }
 body{
+  background-color: #000;
   color: #fff;
   position: relative;
-  display: flex;
-  flex-direction: row;
   background-color: inherit;
   justify-content: center;
   margin: 0;
@@ -19,6 +18,8 @@ body{
   height: 100%
 }
 .container{
+  min-height: 100%;
+  background-color: #000;
   color: #fff;
   display: flex;
   flex-direction: row;
@@ -63,7 +64,7 @@ body{
   display: flex;
   flex-direction: row;
   justify-content: center;
-  max-width: 410px;
+  max-width: 100%;
 
 }
 .info{
@@ -72,6 +73,7 @@ body{
   background-color: gold;
   color: black;
   box-shadow: 10px 10px 5px #000;
+  width: 100%;
 }
 .infoData{
   font-family: 'Libre Baskerville', serif;
@@ -88,7 +90,7 @@ body{
 .morefo{
   background-color: #000;
   color: #fff;
-  font-size: 15px;
+  font-size: 20px;
   text-align: center;
 
 }
@@ -107,14 +109,43 @@ body{
   flex-direction: row;
   justify-content: center;
 }
+#footer {
+  font-family: 'Libre Baskerville', serif;
+  font-size: 10px;
+  text-align: center;
+  position: relative;
+  margin-top: -50px; /* negative value of footer height */
+  height: 50px;
+  clear: both;
+  color: white;
+  background-color: black;
+  padding-top: 20px;
+  border-top: solid .5px white;
+
+}
+#head {
+  background-color: #000;
+  padding: 20px;
+  font-family: 'Rubik', sans-serif;
+  font-size: 30px;
+  border-bottom: solid .5px white;
+  color: gold;
+}
+#colorBG{
+  background-color: gold;
+  display: flex;
+  flex-direction: row;
+}
 button{
   font-size: 30px;
-  border: 0;
+  border: none;
   text-decoration: none;
   padding: 2px;
   height: 40px;
   margin-left: 10px;
   background-color: inherit;
+  cursor: pointer;
+  outline: none;
 }
 a:link{
   color: inherit;
@@ -137,6 +168,8 @@ input{
   color: white;
   background-color: inherit;
   flex-grow: 8;
+  font-family: 'Rubik', sans-serif;
+
 }
 
 input[type="text"]:focus, input[type="text"].focus {
